# recipes-converter

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements_tiktok.txt
.github/workflows/: test.yml
Recipes_bot/: README.md
Recipes_bot/recipes_bot/: tiktok_downloader.py
recipes_bot/: __init__.py  tiktok_downloader.py
recipes_bot/bot/: __init__.py
recipes_bot/downloaders/tiktok/: __init__.py
recipes_bot/extractors/: __init__.py  audio.py  models.py  recipe.py
tests/: test_download.py
tests/test_downloaders/: test_tiktok.py
tests/test_extractors/: __init__.py  test_audio.py  test_recipe.py
