[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipes-bot"
version = "0.1.0"
description = "TikTok video downloader and recipes bot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.48.0",
    "requests>=2.32.4",
    "yt-dlp>=2023.12.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
tiktok-downloader = "recipes_bot.tiktok_downloader:main"

[tool.setuptools]
packages = ["recipes_bot"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
